# SCStickMap

./: README.md  pyproject.toml
SCStickMap/: KeyMap.py  cli.py  core.py
